<resources>
    <string name="app_name">Menu Planner</string>
    <string name="contact">Contact</string>
    <string name="showBurgerPrice">Price:5.50$</string>

    <string name="titleRest1">Burgers</string>
    <string name="tab_text_1">Burgers</string>
    <string name="tab_text_2">Sides</string>
    <string name="title_activity_restaurant1">restaurantActivity1</string>
    <string name="btnRest1">Burger Buns</string>
    <string name="burgerMenuFrag">Burgers</string>
    <string name="burgerSideFrag">Sides</string>
    <string name="buttonRest3">China Palace</string>
    <string name="titleRestSide">Sides</string>
    <string name="showChipPrice">2.20$</string>
    <string name="burgerDetails">The Burger is a house special and highly recommended, it has 530Cal and comes with chips and a drink!</string>
    <string name="chipDetails">Chips go great with any burger or just on there own, 200Cal and you can get salt, vinegar or a sauce with them!</string>
    <string name="burgerName">Regular Burger</string>
    <string name="chipName">Chips</string>
    <string name="contactNum">085 - 8543655</string>
    <string name="emailInfo">MenuPlanner@gmail.com</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_upBtn">Sign Up</string>
    <string name="sign_inBtn">Sign In</string>
    <string name="emailSignin"></string>
    <string name="passwordSignIn"></string>
    <string name="userSignIn">userSignIn</string>
    <string name="Username">email</string>
    <string name="Password">Password</string>
    <string name="addTitledesc">Enter Food title</string>
    <string name="addDesc">Enter food desciption</string>
    <string name="addPrice">Price</string>
    <string name="addToMenuBtn">Add to Menu</string>
    <string name="doubleBurger">The Burger is a double patty double bun burger, it has 680Cal and comes with chips and a drink!</string>
    <string name="doubleBurgerTitle">Double Burger</string>
    <string name="customBurgerTitle">Customize Burger</string>
    <string name="customBurgerDesc">"Choose from a wide range of burgers, pick what toppings and sauces are placed on your burger."</string>
    <string name="drinkTitle">Drink</string>
    <string name="drinkDesc">Choose from a wide range of drink selection\'s in 330cl cans</string>
    <string name="chickenTitle">Chicken winges</string>
    <string name="chickenDesc">5 chicken wings with different selections of sauce from cheese to ketchup</string>
    <string name="helpMessage">Enter an email and a 6 character long password</string>
</resources>